[project]
name = "cronwidget"
version = "0.1.0"
description = "Visual cron expression editor widget for marimo/Jupyter"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Cemre Han Cavdar" }]
keywords = ["anywidget", "marimo", "jupyter", "cron", "widget"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = [
    "anywidget>=0.9.2",
]

[project.urls]
Homepage = "https://github.com/cemrehancavdar/cronwidget"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cronwidget"]

[tool.hatch.build]
only-packages = true
artifacts = ["src/cronwidget/static/*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "pyright>=1.1.0",
    "pytest>=8.0",
    "marimo>=0.18.0",
    "httpx>=0.28.1",
    "croniter>=6.2.2",
    "chime>=0.7.0",
    "huey>=2.6.0",
]
